
* Noteworthy changes in the upcoming release

This release includes libiconv, hunspell, Google's Protocol buffers,
mysql-connector/python, lcms2 (needed by ghostscript), and CGAL.

Add mshr, which is used for mesh generation in FEniCS.

Upgrade to Slurm 20.02.7.

OpenBLAS is now built without multithreading.


* Noteworthy changes in release 0.6.1 (2021-04-13)

This release includes several new modules, including automake,
TexLive, poppler, ICU, ghostscript, graphite2, libpaper and OpenJPEG.

A circular dependency betwen harfbuzz, freetype and graphite2 has also
been adressed. Further, pango now uses a version of harfbuzz with
graphite2 support.

Also, gobject-introspection is now built with the correct version of
Python to ensure that its Python packages are properly available to
other packages that need them.


* Noteworthy changes in release 0.6.0 (2021-03-19)

This release includes several new modules, including OpenMPI and PETSc
with CUDA support, gcc 8.4, Ipopt, autoconf, GNU gengetopt, Valgrind,
meshio, numba, libgccjit, Slurm 20.02.5, and an experimental version
of FEniCS-X.