@@ -1,6 +1,6 @@
 2021-07-29 James D. Trotter <james@simula.no>
 
-	Add qt5 5.15.2, mesa 21.1.5, libdrrm 2.4.107 and
+	Add paraview 5.9.1, qt5 5.15.2, mesa 21.1.5, libdrrm 2.4.107 and
 	python-mako-1.1.4, various xcb-util packages and xkbcommon 1.3.0.
 
 2021-06-16 James D. Trotter <james@simula.no>
